fixed white spacing on image on care

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,8 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  padding-top: 0px;
+  padding-right: 0px;
 }
 
 hr {
